--- a/src/app.scss
+++ b/src/app.scss
@@ -10,10 +10,10 @@
 
     scroll-behavior: smooth;
     //Snap Code
-    scroll-snap-type: y mandatory;
+    //scroll-snap-type: y mandatory;
 
     //removing the scroll bar
-    scrollbar-width: none;
+    //scrollbar-width: none;
     &::-webkit-scrollbar {
       display: none;
     }
@@ -23,7 +23,7 @@
       height: calc(100vh - 70px);
 
       //the snap code
-      scroll-snap-align: start;
+      //scroll-snap-align: start;
     }
   }
 }
