--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -80,12 +80,21 @@
     }
 
     form {
+      border: white 1px solid;
+      border-radius: 1rem;
       width: 70%;
       height: 70%;
       display: flex;
       align-items: center;
       justify-content: space-around;
       flex-direction: column;
+      margin-top: 2rem;
+      box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
+      @include mobile {
+        width: 90%;
+        height: 80%;
+      }
 
       input {
         width: 30rem;
