--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -47,6 +47,7 @@
       justify-content: center;
       position: relative;
       transition: all 1s ease;
+      box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 
       @include mobile {
         width: 40rem;
